--- a/mail/package.json
+++ b/mail/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "kulam-temp-mail",
+  "name": "kulam-mailgen",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "googleapis": "^118.0.0"
+    "express": "^4.18.2"
   }
 }
